--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       - /dev/snd
     environment:
       - DISPLAY=${DISPLAY:-:0}
-      - PULSE_SERVER=${PULSE_SERVER:-}
+      - PULSE_SERVER=unix:/tmp/pulse-PKdhtXMmr18n/native
     group_add:
       - audio
     privileged: true
